--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-      "@langchain/core": "^0.3.66",
-      "@langchain/openai": "^0.6.3",
-      "autoprefixer": "^10.4.21",
-      "next": "15.4.4",
-      "postcss": "^8.5.6",
-      "react": "19.1.0",
-      "react-dom": "19.1.0"
+        "@langchain/core": "^0.3.66",
+        "@langchain/openai": "^0.6.3",
+        "autoprefixer": "^10.4.21",
+        "next": "15.4.4",
+        "postcss": "^8.5.6",
+        "react": "19.1.0",
+        "react-dom": "19.1.0"
     },
     "devDependencies": {
-      "@eslint/eslintrc": "^3",
-      "@types/node": "^20",
-      "@types/react": "^19",
-      "@types/react-dom": "^19",
-      "eslint": "^9",
-      "eslint-config-next": "15.4.4",
-      "typescript": "^5"
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4.1.11",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.4.4",
+        "typescript": "^5"
     }
-  }
+}
